# applehealth

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  Readme.md  applehealth.py  env-examples  install.sh  manage.py  progress-0653d8e6-574c-4db6-9ddf-6c5538409cb1.txt  pyproject.toml  pytest.ini  requirements-docker.txt  requirements.txt  run  schema.json
.github/workflows/: django-tests.yml
main/: models.py  serializers.py  storage.py  tests.py  urls.py  views.py
main/migrations/: 0001_initial.py  0002_healthmetric_summary_text_and_more.py  0003_alter_healthmetric_health_data_llmanalytics.py  0004_create_file_uploads_table.py
skills/apple-health-export-analyzer/: README.md  SKILL.md
skills/apple-health-export-analyzer/agents/: openai.yaml
skills/apple-health-export-analyzer/assets/health-analyzer-local/: index.ts
skills/apple-health-export-analyzer/assets/health-analyzer-mac-local/: SKILL.md
skills/apple-health-export-analyzer/assets/health-analyzer-mac-local/agents/: openai.yaml
skills/apple-health-export-analyzer/references/: workflow.md
skills/apple-health-export-analyzer/scripts/: check_setup.py  compare_recent_trends.py  daily_brief.py  install_mac_app_companion.py  openclaw_common.py  weekly_summary.py
src/: applehealth.py  applehealth_intensity_patch.py  integrate_intensity_analysis.py  test_intensity_improvement.py  workout_intensity_analyzer.py
src/healthai/: __init__.py  __main__.py  chat.py  cli.py  models.py  setup_wizard.py  ui.py
tests/: test_schema_smart_ring_metrics.py
tests/fixtures/: smart_ring_schema_expectations.json
zerofcks/: asgi.py  settings.py  urls.py  wsgi.py
